--- a/ic/config.example.json
+++ b/ic/config.example.json
@@ -3,6 +3,8 @@
 	"listen_port": 17151,
 	"ipv6": false,
 
+	"worker_amount": 2,
+
 	"salt_len": 8,
 	"crypto_lib_path": "/usr/local/lib/libcrypto.so.1.1",
 
