完成加入和离开集群的功能

--- a/Neverland/example/config-controller.example.json
+++ b/Neverland/example/config-controller.example.json
@@ -18,6 +18,9 @@
 	"main_log_path": "/var/log/ic.log",
 
 	"cluster_nodes": {
-		"relay-0000": "192.168.122.23"
+		"relay-0000": {
+			"ip": "192.168.122.23",
+			"role": "relay"
+		}
 	}
 }
