修改 example 中的 pid file

--- a/Neverland/example/config-controller.example.json
+++ b/Neverland/example/config-controller.example.json
@@ -1,8 +1,8 @@
 {
 	"basic": {
 		"node_id": 1,
-		"worker_amount": 8,
-		"pid_file": "/tmp/nl_master.pid"
+		"worker_amount": 1,
+		"pid_file": "/tmp/nl_ctrl.pid"
 	},
 
 	"net": {
