--- a/Neverland/example/config-relay.example.json
+++ b/Neverland/example/config-relay.example.json
@@ -9,7 +9,7 @@
 		"identification": "relay-0000",
 
 		"aff_listen_addr": "0.0.0.0",
-		"aff_listen_port": 17151,
+		"aff_listen_port": 17152,
 		"ipv6": false,
 
 		"crypto": {
@@ -19,19 +19,19 @@
 	},
 
 	"shm": {
-		"socket_dir": "/tmp/nl-shm",
+		"socket_dir": "/tmp/nl-relay/shm",
 		"manager_socket_name": "manager"
 	},
 
 	"log": {
 		"main": {
 			"level": "debug",
-			"path": "/tmp/nl-log/nl.log",
+			"path": "/tmp/nl-relay/log/nl.log",
 			"stdout": true
 		},
 		"shm": {
 			"level": "debug",
-			"path": "/tmp/nl-log/shm.log",
+			"path": "/tmp/nl-relay/log/shm.log",
 			"stdout": true
 		}
 	},
