加入發起端的 ConnectionManagement 邏輯

--- a/Neverland/example/config-controller.example.json
+++ b/Neverland/example/config-controller.example.json
@@ -17,6 +17,7 @@
 			"password": "INDESCRIBABLE",
 			"cipher": "aes-256-gcm",
 			"salt_len": 8,
+			"iv_len": 8,
 			"iv_duration_range": [1000, 2000]
 		}
 	},
@@ -35,6 +36,11 @@
 		"shm": {
 			"level": "debug",
 			"path": "/tmp/nl-ctrl/log/shm.log",
+			"stdout": true
+		},
+		"conn": {
+			"level": "debug",
+			"path": "/tmp/nl-ctrl/log/conn.log",
 			"stdout": true
 		}
 	},
