--- a/Neverland/example/config-controller.example.json
+++ b/Neverland/example/config-controller.example.json
@@ -14,7 +14,7 @@
 
 		"crypto": {
 			"lib_path": "/usr/local/lib/libcrypto.so.1.1",
-			"password": "INDESCRIBABLE",
+			"password": "a SUPER SUPER LONG AND VERY VERY INDESCRIBABLE pASSw0rD",
 			"cipher": "aes-256-gcm",
 			"salt_len": 8,
 			"iv_len": 8,
